--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Edwin Wood <woode@dnb.com>",
   "license": "MIT",
   "scripts": {
-    "serve": "yarn && webpack --config=webpack.config.js --watch --progress"
+    "serve": "yarn && webpack --config=webpack.config.js --watch --progress",
+    "build": "webpack --config=webpack.prod.js"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -20,7 +21,8 @@
     "vue-loader": "^15.2.4",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.16.0",
-    "webpack-cli": "^3.0.8"
+    "webpack-cli": "^3.0.8",
+    "webpack-merge": "^4.1.3"
   },
   "dependencies": {
     "unfetch": "^3.0.0",
