--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "serve": "yarn && webpack --config=webpack.config.js --watch --progress",
-    "build": "webpack --config=webpack.prod.js"
+    "build": "webpack --config=webpack.prod.js --progress"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -21,8 +21,10 @@
     "vue-loader": "^15.2.4",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.16.0",
+    "webpack-archive-plugin": "^3.0.0",
     "webpack-cli": "^3.0.8",
-    "webpack-merge": "^4.1.3"
+    "webpack-merge": "^4.1.3",
+    "zip-webpack-plugin": "^3.0.0"
   },
   "dependencies": {
     "unfetch": "^3.0.0",
