--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^1.0.0",
+    "hard-source-webpack-plugin": "^0.11.1",
     "html-webpack-plugin": "^3.2.0",
     "vue-loader": "^15.2.4",
     "vue-template-compiler": "^2.5.16",
