--- a/package.json
+++ b/package.json
@@ -31,9 +31,15 @@
     "apollo-cache-inmemory": "^1.2.5",
     "apollo-client": "^2.3.5",
     "apollo-link-http": "^1.5.4",
+    "apollo-link-retry": "^2.2.4",
+    "apollo-link-ws": "^1.0.8",
+    "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
+    "lodash": "^4.17.10",
+    "subscriptions-transport-ws": "^0.9.12",
     "unfetch": "^3.0.0",
     "vue": "^2.5.16",
-    "vue-property-decorator": "^7.0.0"
+    "vue-property-decorator": "^7.0.0",
+    "vuex": "^3.0.1"
   }
 }
