--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "css-loader": "^1.0.0",
     "hard-source-webpack-plugin": "^0.11.1",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.21.0",
     "vue-loader": "^15.2.4",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.16.0",
@@ -39,6 +40,7 @@
     "subscriptions-transport-ws": "^0.9.12",
     "unfetch": "^3.0.0",
     "vue": "^2.5.16",
+    "vue-material": "^1.0.0-beta-10.2",
     "vue-property-decorator": "^7.0.0",
     "vuex": "^3.0.1"
   }
