--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "lodash": "^4.17.10",
+    "rxjs": "^6.2.2",
+    "rxjs-compat": "^6.2.2",
     "subscriptions-transport-ws": "^0.9.12",
     "unfetch": "^3.0.0",
     "vue": "^2.5.16",
